--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,3 +3,4 @@
 <title>{{ .Site.Title }}</title>
 <meta name="description" content="{{ .Site.Params.tagline_en }}" />
 <link rel="stylesheet" href="/styles.css" />
+<script src="/auth.js" defer></script>
