add photo viewer with rotation

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,3 +4,4 @@
 <meta name="description" content="{{ .Site.Params.tagline_en }}" />
 <link rel="stylesheet" href="/styles.css" />
 <script src="/auth.js" defer></script>
+<script src="/photo-viewer.js" defer></script>
